feat: web UI
